<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "WhatsUp"><!ENTITY author "MrGreen">]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="chats_tab_text">Chats</string>
    <string name="status_tab_text">Stories</string>
    <string name="welcome_text">Welcome to &appname;</string>
    <string name="welcome_btn_text">Continue</string>
    <string name="welcome_terms_text">No Privacy Policy. Tap \"continue\" to sign up your account</string>
    <string name="signup_header_text">Enter your phone number</string>
    <string name="signup_sub_header_text">WhatsUp will need to verify your phone number.</string>
    <string name="signup_phone_hint">Phone Number</string>
    <string name="next_btn_text">Next</string>
    <string name="confirm_btn_text">Confirm</string>
    <string name="contact_title">Contacts</string>
    <string name="send_otp_text">Send OTP</string>
    <string name="create_profile_text">Create your WhatsUp Profile</string>
    <string name="create_profile_name_hint">Account Name</string>
    <string name="create_profile_bio_hint">Account Bio</string>
    <string name="banner_ad_id">ca-app-pub-9583894405161645/3426652616</string>
    <string name="banner_ad_id_test">ca-app-pub-3940256099942544/6300978111</string>


</resources>